# OrcaDemos

./: .gitignore  .tool-versions  README.md  pyproject.toml
news_classification_demo/: demo.ipynb
util/: config.py  datasets_util.py  embeddings.py  eval_suite.py  local_dataset.py  orca_dataset_util.py  splitter.py  torch_orca_utils.py
